# mcp-agentic-starter

./: .gitignore  CONTRIBUTING.md  GETTING-STARTED.md  LICENSE.md  QUICK-START.md  README.md  TROUBLESHOOTING.md  pyproject.toml  requirements.txt
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  question.yml
datasets/sales/: README.json  README.md
examples/data-analysis/: README.md  generate_sales_data.py  server.py
examples/database/: README.md  load_sample_data.py  schema.sql  server.py
examples/file-system/: README.md
examples/web-api/: README.md  mock_api.py  server.py
projects/: project-ideas.md
prompts/: effective-prompts.md
tutorials/: 01-mcp-basics.md  02-first-server.md  03-agentic-patterns.md  04-advanced-workflows.md
